--- a/spring-boot-webflux-apirest/src/main/resources/application.properties
+++ b/spring-boot-webflux-apirest/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.uri= mongodb://localhost:27017/spring_boot
 
 config.uploads.path= src/main/resources/uploads/
+#config.base.endpoint= /api/v2/productos
+config.base.endpoint= /api/productos
