--- a/spring-boot-webflux-apirest/src/main/resources/application.properties
+++ b/spring-boot-webflux-apirest/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.application.name= servicio-apirest
+server.port= 8080
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+
 spring.data.mongodb.uri= mongodb://localhost:27017/spring_boot
 
 config.uploads.path= src/main/resources/uploads/
