--- a/spring-boot-webflux-client/src/main/resources/application.properties
+++ b/spring-boot-webflux-client/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.application.name= servicio-client
 server.port: 8090
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
-config.base.endpoint: http://localhost:8080/api/v2/productos
+# URL sin eureka
+#config.base.endpoint: http://localhost:8080/api/v2/productos
+# URL con eureka
+config.base.endpoint: http://servicio-apirest/api/v2/productos
